2003-11-08 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* support/regression/fwk/lib/testfwk.c: printn is recursive and thus needs
	the reentrant attribute.
	* src/hc08/gen.c (genPackBits): added missing stack readjustment
	* sim/ucsim/hc08.src/inst.cc (inst_mov): fixed bugs with mov instruction
	simulation
	* src/SDCCast.c (decorateType): fixed bug with storage class not being
	updated during pointer dereference; f.e. ~(((char *)1)*) was being
	erroneously reduced to a literal.
	* src/hc08/ralloc.c (packRegisters, rematStr),
	* src/hc08/gen.c (aopForRemat): allow literals to be rematerialized in
	some cases

2003-11-08 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/main.c: fixed bug #838385. Thanks to Josef Pavlik for finding and fixing
	* doc/sdccman.lyx: changed from 'article' to 'book'
	* doc/Makefile: readded test_suite_spec and cdbfileformat

2003-11-08 Bernhard Held <bernhard@bernhardheld.de>

	* device/include/stdlib.h: include malloc.h to comply with ANSI
	* support/regression/tests/malloc.c: include stdlib.h instead of malloc.h

2003-11-07 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* doc/Makefile: sdccman.pdf should build with correct references (more info in commit msg)
	* doc/clean.mk: also remove *.out files
	* doc/sdccman.lyx: some additions, larger top/bottom margins

2003-11-07 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCC.y: fixed bug #837365
	* support/regression/tests/bitopcse.c
	* src/hc08/gen.c (genPointerGet): Don't assume pointer operand is
	a symbol (might be valop instead)
	* device/lib/Makefile.in: added errno.c to HC08SOURCES
	* device/lib/clean.mk: added hc08 to the cleaning list

2003-11-04  Borut Razem <borut.razem@siol.net>

	* configure, configure.in, sdcc_vc_in.h, sdcconf_in.h: reverted changes,
	  made 2003-11-04
	* support/Util/NewAlloc.c, as/hc08/lklibr.c, as/mcs51/lklibr.c,
	  as/z80/aslist.c, as/z80/assym.c: removed inclusion of nonstandard malloc.h;
	  malloc is declared in standard stdlib.h